// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Next matches snaphost 1`] = `
<button
  className="navButton"
  data-testid="button-next"
  onClick={[Function]}
>
  <svg
    color=""
    fill="currentColor"
    height="2em"
    size="2em"
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 512 512"
    width="2em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M295.6 163.7c-5.1 5-5.1 13.3-.1 18.4l60.8 60.9H124.9c-7.1 0-12.9 5.8-12.9 13s5.8 13 12.9 13h231.3l-60.8 60.9c-5 5.1-4.9 13.3.1 18.4 5.1 5 13.2 5 18.3-.1l82.4-83c1.1-1.2 2-2.5 2.7-4.1.7-1.6 1-3.3 1-5 0-3.4-1.3-6.6-3.7-9.1l-82.4-83c-4.9-5.2-13.1-5.3-18.2-.3z"
    />
  </svg>
</button>
`;

exports[`Button Previous matches snapshot 1`] = `
<button
  className="navButton"
  data-testid="button-previous"
  onClick={[Function]}
>
  <svg
    color=""
    fill="currentColor"
    height="2em"
    size="2em"
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 512 512"
    width="2em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M216.4 163.7c5.1 5 5.1 13.3.1 18.4L155.8 243h231.3c7.1 0 12.9 5.8 12.9 13s-5.8 13-12.9 13H155.8l60.8 60.9c5 5.1 4.9 13.3-.1 18.4-5.1 5-13.2 5-18.3-.1l-82.4-83c-1.1-1.2-2-2.5-2.7-4.1-.7-1.6-1-3.3-1-5 0-3.4 1.3-6.6 3.7-9.1l82.4-83c4.9-5.2 13.1-5.3 18.2-.3z"
    />
  </svg>
</button>
`;

exports[`GoToPage Button matches snapshot 1`] = `
<button
  className="pageButton carved"
  data-testid="goto-page-button"
  onClick={[Function]}
>
  9
</button>
`;
